--- a/authors/apps/authentication/templates/email_verification.html
+++ b/authors/apps/authentication/templates/email_verification.html
@@ -5,15 +5,87 @@
     <meta name="viewport" content="width=device-width">
     <title>Authors Haven</title>
     <style>
+      .header{
+        /* background-color: #; */
+        width: 100%;
+      
+        
+      }
+      body{
+        background-color: aliceblue;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+        
+      }
+
+      .mail_container{
+        font-family: -apple-system, BlinkMacSystemFont, Roboto;
+        font-size: 14px;
+        float: left;
+        padding: 30px;
+        max-width: 678px;
+        background-color: #ffffff;
+      }
+      .mail_body{
+        text-align: center;
+        float: left;
+      }
+      img{
+        display: inline;
+      }
+      .mail_footer{
+        background-color: rgb(248, 250, 248);
+        float: left;
+        width: 100%;
+        height: 70px;
+        padding: 30px;
+        max-width: 678px;
+        margin-right: 450px;
+        
+
+      }
+      .mail_button{
+        padding: 10px;
+        background-color: darkorange;
+        width: 60%;
+        float: left;
+        border-radius: 10px;
+        margin: 0 20px 0 60px;
+      }
+      .div_button{
+        float: left;
+        width: 100%;
+        align-content: center;
+        margin-bottom: 30px;
+        color: #ffffff
+      }
+      .mail_button{
+        color: #ffffff;
+        text-decoration: none;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: large;
+        display: inline;
+      }
     </style>
   </head>
   <body>
-      <div>
-          <h1>AUTHORS HAVEN</h1>
-          <p>Hey {{ username }},</p>
-          <p>Your registration on <a href="https://ah-robotics-staging.herokuapp.com/" >Authors Haven</a> was received. Click the link below to confirm registration</p>
-          <p><a href="{{verification_link}}">Click here</a></p>
-          <p>Authors Haven &copy; 2019</p>
+      <div class="mail_container">
+        <!-- <div class="header">
+          <h1 class="header-text">A</h1>
+          <hr>
+        </div> -->
+        <div class="mail_body">
+          <img src="https://res.cloudinary.com/dgfzfsgsm/image/upload/v1548161458/ahlogo.png" alt="">
+            <p>Hey {{ username }},</p>
+            <p>Your registration on <a href="https://ah-robotics-staging.herokuapp.com/" >Authors Haven</a> was received. Click the link below to confirm registration</p>
+            <a class="mail_button" href="{{verification_link}}">Click here</a>
+            
+        </div>
+        
       </div>
+      <div class="mail_footer">
+          <p>Authors Haven &copy; 2019</p>
+
+        </div>
   </body>
 </html>
