--- a/static/css/email.css
+++ b/static/css/email.css
@@ -1,5 +1,5 @@
 *{
-    font-family: Baskerville, "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 100;
 }
 header {
@@ -54,3 +54,56 @@ p{
     font-size: 18px;
     text-align: center;
 }
+
+
+
+body{
+    background-color: aliceblue;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  .mail_container{
+    font-family: -apple-system, BlinkMacSystemFont, Roboto;
+    font-size: 14px;
+    float: left;
+    padding: 30px;
+    max-width: 678px;
+    background-color: #ffffff;
+  }
+  .mail_body{
+    text-align: center;
+    float: left;
+  }
+  img{
+    display: inline;
+  }
+  .mail_footer{
+    background-color: rgb(248, 250, 248);
+    float: left;
+    width: 100%;
+    height: 70px;
+    padding: 30px;
+    max-width: 678px;
+    margin-right: 450px;
+  }
+  .mail_button{
+    padding: 10px;
+    background-color: darkorange;
+    width: 50%;
+    float: left;
+    border-radius: 10px;
+    margin: 0 20px 0 150px;
+  }
+  .div_button{
+    float: left;
+    width: 100%;
+    align-content: center;
+    margin-bottom: 30px;
+    color: #ffffff
+  }
+  .mail_button{
+    color: #ffffff;
+    text-decoration: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: large;
+    display: inline;
+  }
