bug(reaction): update the email styles
- update the forgot password email style
- update the verification email style

[#164302547]

--- a/authors/apps/authentication/templates/email_template.html
+++ b/authors/apps/authentication/templates/email_template.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <body>
     <header>
-        <h2>Author's Haven</h2>
+        <h2>Authors Haven</h2>
     </header>
     <div class="card">
         <div class="email-content">
@@ -12,7 +12,7 @@
         </div>
     </div>
     <footer>
-        <h4>Author's Haven support team</h4>
+        <h4>Authors Haven support team</h4>
     </footer>
 </body>
 
