--- a/authors/apps/authentication/templates/password_reset_template.html
+++ b/authors/apps/authentication/templates/password_reset_template.html
@@ -1,8 +1,7 @@
 {% extends 'email_template.html' %}
 {% block content %}
-<p>
-    Here is the link to reset your password
-    <br>
-    <a class="button" href="{{ reset_password_link }}">Click here</a>
+<p id="password-reset-paragraph">
+    Click the button below to reset your password
 </p>
+<p class="button-link"><a id="reset_password" href="{{ reset_password_link }}">Click here</a></p>
 {% endblock %}
