--- a/static/css/email.css
+++ b/static/css/email.css
@@ -2,108 +2,61 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 100;
 }
-header {
-    background: #1e88e5;
-    text-align: center;
-    height: 80px;
-    color: #ffffff;
-    z-index: 1.5em;
-}
+
 h2{
     padding-top: 1.7%;
+    text-align: center;
+
 }
 footer{
-    background: #1e88e5;
     text-align: center;
     height: 50px;
     color: #ffffff;
     z-index: 1.5em;
 }
-h4{
-    margin-top: 10%;
-    padding-top: 1.2%;
-    font-family: Baskerville, "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif;
-}
-h3{
-    margin-top: -10px;
-    font-weight: 300;
-    background: #e3f2fd;
-}
 
-button{
-padding: 0;
-  border: none;
-  font: inherit;
-  color: inherit;
-  background-color: transparent;
-  cursor: pointer;
-  color: #ffffff;
-  background-color: #1e88e5;
-  border: solid 1px transparent;
-  border-radius: 4px;
-  margin: 2px 0;
-  display: inline-block;
+#password-reset-paragraph,
+.email-verification{
   text-align: center;
-  text-decoration: none;
-  padding: 0.5em 1em;
-  margin-left: 45%;
-  margin-left: -80px;
-  margin-top: 5%;
+  font-size: 18px;
+  font-family: 'Open Sans', sans-serif;
 }
-p{
-    font-size: 18px;
-    text-align: center;
-}
-
-
 
 body{
-    background-color: aliceblue;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  .mail_container{
-    font-family: -apple-system, BlinkMacSystemFont, Roboto;
-    font-size: 14px;
-    float: left;
-    padding: 30px;
-    max-width: 678px;
-    background-color: #ffffff;
-  }
-  .mail_body{
-    text-align: center;
-    float: left;
-  }
-  img{
-    display: inline;
-  }
-  .mail_footer{
-    background-color: rgb(248, 250, 248);
-    float: left;
-    width: 100%;
-    height: 70px;
-    padding: 30px;
-    max-width: 678px;
-    margin-right: 450px;
-  }
-  .mail_button{
-    padding: 10px;
-    background-color: darkorange;
-    width: 50%;
-    float: left;
-    border-radius: 10px;
-    margin: 0 20px 0 150px;
-  }
-  .div_button{
-    float: left;
-    width: 100%;
-    align-content: center;
-    margin-bottom: 30px;
-    color: #ffffff
-  }
-  .mail_button{
-    color: #ffffff;
-    text-decoration: none;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: large;
-    display: inline;
-  }
+  background-color: aliceblue;
+  font-family: 'Open Sans', sans-serif;
+}
+
+#reset_password,
+.mail_button {
+  background-color: #00d0a0;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 19px;
+  padding-right: 19px;
+  color: #ffffff;
+  border-radius: 24px;
+  text-decoration: none;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.div_button{
+  float: left;
+  width: 100%;
+  align-content: center;
+  margin-bottom: 30px;
+  color: #ffffff
+}
+
+.button-link{
+  text-align: center;
+} 
+
+footer > h4 {
+  text-align: center;
+}
+
+footer {
+  background-color: grey;
+  height: 30px;
+}
